styles/subscription.css
/* ... */
  /* mobile */
  @media(max-width:640px){
 
  .activeTab , .disabledTab{
    width:100px;
  }

  
  .labels{
    display:none;
  }
  .marginTop-17{
    margin-top:-38px !important;
  }


  .swiper-slide {
    font-size: 14px;
width:85vw !important;
    
  }

  .swiper-slide-monthly{
    height:836px;    
  }
  
  .swiper-slide-trial {
      height:640px !important;
  }

  .tipBg{
    width:100% !important;
  }
  .mobile-tag{
    display:inline-block !important;
    max-width:fit-content!important;
    padding:5px;
    border-radius:5px;
    background:black;
    color:#959595;
  }
  .marginTop-20 {
    margin-top: -60px !important;
}
.marginTopSoldOut {
    margin-top: -60px !important;
}
.marginTop-5 {
    margin-top: -2px ;
}
#swiper-wrapper-trial{
    margin:0 !important;
  }
#section-trial{
    margin:0 !important;
  }
}


  .recommendedBorder{
    background-image: linear-gradient(90deg, #212123, #212123), linear-gradient(300.3deg, #0575E6 9.6%, #FF0CF5 92.85%) !important;
    background-clip: padding-box, border-box;
    background-origin: border-box;
    border: 2px solid transparent;
  }
  .swiper-slide-tab {
    text-align: center;
    font-size: 16px;
    display: flex;
    justify-content: center;
    align-items: center;
     background:#212123;
      width:283.14px !important;
      height:450px !important;
      border-radius:30px;
      padding:40px 25px 40px 25px;
  }
  /* @media (min-width: 768px) {
    .swiper-slide{
      width:257.4px !important;
      height:500px !important;
      font-size: 16px;
      padding:40px 25px 40px 25px;
    }
    .number{ 
      margin:8px !important;
    }
    .cross{
      height:10px;
      width:10px;
      }
  } */
  .swiper-pagination-bullets{
   display:none;
  }
  .sub-btn:hover{
    background:linear-gradient(300.3deg, #0575E6 9.6%, #FF0CF5 92.85%);
    border:none!important;
    outline:none !important;
    box-shadow:none!important;
  }
  .sub-btn:active{
    background:linear-gradient(300.3deg, #07427E 9.6%, #70006C 92.85%);
    color:#A8A8A8 !important;
    border:none!important;
    outline:none !important;
    box-shadow:none!important;
  }
  .sub-btn:focus{
    border:none!important;
    outline:none !important;
    box-shadow:none!important;
  }
  .upper-container{
    display:flex;
    flex-direction:column;
    justify-content: center;
    align-items: center;
  
  }


  
  .number{ 
    margin:10px !important;
  }
  .number1{
    margin:10px !important;
  }
  .sub-container{
    display:flex;
    flex-direction:column;
    align-item:center;
    justify-content: center;
  }
  .label-container{
    display:flex;
    flex-direction:column;
    align-item:center;
    justify-content: center;
    width:334px;
    margin-top:69.5px;
    
  }
  .label-container-tab{
    display:flex;
    flex-direction:column;
    align-item:center;
    justify-content: center;
    width:334px;
    margin-top:3px;
    
  }


  .text-overlay {
    top: 0;
    left: 0;
    width:100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content:flex-end;
    align-items: center;
    color: white; 
    z-index:1;
    margin:auto;
  }
  
  .text-overlay h2 {
    font-size: 40px; 
    margin-bottom: 0px !important; 
    font-weight:800;
  }
  
  .banner-heading{
    padding:0px 10px !important;
  }

  
@media only screen and (max-width: 768px) {
    .desktop-img {
      display: none;
    }
    .mobile-img {
      display: none;
    }
    .tablet-img {
      width: 100%;
      object-fit: cover;
      display: block;
      height: 269px !important;
    }
    .text-overlay h2 {
        font-size: 30px; 
      }
  }
  

  @media only screen and (max-width: 480px) {
    .desktop-img {
      display: none;
    }
    .mobile-img {
      width: 100%;
      height: 20%;
      object-fit: cover;
      display: block;
    }
    .tablet-img {
      display: none;
    }


  }

  /* For larger screens */
  @media only screen and (min-width: 769px) {
    .desktop-img {
      width: 100%;
      height: 20%;
      object-fit: cover;
      display: block;
    }
    .tablet-img {
      display: none;
    }
    .mobile-img {
      display: none;
    }
  }
  



  #section-trial{
    display:none;
  }


.text-dull{
    color:#DCDCDC !important;
    font-weight:500 !important;
  }

.text-muted{
    color:##959595 !important;
    font-weight:500 !important;
}
  
  .price{
    font-weight:700;
    font-size:33px;
  }
  
  .plan-name {
    font-weight: 400;
    font-size: 38px;
    font-family:'Nine Tsuki' !important;
    margin-top: 10px !important;
  }
  
  .blue-gradient{
    background: linear-gradient(90deg, #3AA0FE 0%, #59FEF4 100%);
    -webkit-text-fill-color: transparent; 
    -webkit-background-clip: text; 
  }
  
  .mobile-tag{
    display:none;
  }
  .orange-gradient{
    background: linear-gradient(90deg, #FE753A 0%, #F4C37A 100%);
    -webkit-text-fill-color: transparent; 
    -webkit-background-clip: text;
  }
  .dark-orange-gradient{
    background: linear-gradient(to right, #FF0DBB 0%, #F56122 10%, #F56122 66.67%, #FF0DBB 100%);
    -webkit-text-fill-color: transparent; 
    -webkit-background-clip: text; 
  }
  .tipBg {
    background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),linear-gradient(270deg, #A83AFE 0%, #6E59FE 100%);
    border-radius: 0px 0px 20px 20px;
    border-radius:15px;
    width:70%;
    font-size:16px;
    margin:auto;
    
  }
  .grey-btn{
    border-radius:60px;
    padding:10px 10px;
    width:  110px;
    margin-bottom:20px !important;
    color:white;
    font-size:16px;
    font-weight:600;
    background: linear-gradient(90deg, #616161 0%, #434343 100%);
    white-space: nowrap;
  }
  .top-img{
    margin-bottom:10px !important;
  }
  .img-container{
    display:flex;
    flex-direction:column;
    justify-content:center;
    align-items:center;
  }
  .fontCustom{
    font-size:16px;
  }
  .upper-content{
    color:#DCDCDC;
    
  }
  .lower-content{
    color:#959595;
  }
/* ... */

